--- a/public/quiz.html
+++ b/public/quiz.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>AI Revision Quiz (MCQ)</title>
+  <title>AI Revision Quiz (Next 20)</title>
   <style>
     body { font-family: Arial, sans-serif; background:#0b1220; color:#fff; margin:0; padding:20px; }
     .box { max-width: 920px; margin: 0 auto; background:#111a2e; padding:20px; border-radius:12px; }
     h1 { margin: 0 0 8px; }
-    .meta { opacity:.85; }
+    .meta { opacity:.85; margin-bottom: 8px; }
     .row { display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-top:10px; }
     button { padding:10px 14px; border-radius:10px; border:0; cursor:pointer; font-weight:600; }
     button:disabled { opacity:.55; cursor:not-allowed; }
-    input[type="file"] { padding:6px; }
     .status { margin-top:12px; padding:10px; border-radius:10px; background: rgba(255,255,255,.08); }
     .status.ok { background: rgba(56,211,159,.15); }
     .status.bad { background: rgba(255,107,107,.15); }
@@ -30,17 +29,18 @@
 <body>
   <div class="box">
     <h1>AI Revision Quiz</h1>
-    <div class="meta">Upload a PDF → generate <b>50 MCQ</b> (no TF / no FIB).</div>
-    <div class="tiny">Tip: If you updated the code but still see old text, do a hard refresh: <code>Ctrl + F5</code>.</div>
+    <div class="meta">Upload one PDF, then click <b>Next 20</b> as many times as you want.</div>
+    <div class="tiny">If you change PDF midway, click <b>Reset</b> first.</div>
 
     <div class="card">
       <div class="row">
         <input type="file" id="pdfFile" accept="application/pdf">
-        <button id="genBtn">Generate 50 MCQ</button>
+        <button id="next20Btn">Next 20</button>
         <button id="startBtn" disabled>Start Quiz</button>
-        <button id="restartBtn" disabled>Restart</button>
+        <button id="resetBtn">Reset</button>
       </div>
       <div id="status" class="status">Status: Waiting for PDF.</div>
+      <div class="tiny" id="bankInfo"></div>
     </div>
 
     <div class="card" id="quizCard" style="display:none">
@@ -50,7 +50,6 @@
       </div>
 
       <h3 id="prompt" style="margin-top:10px"></h3>
-
       <div id="options" class="options"></div>
 
       <div class="row">
@@ -64,12 +63,25 @@
 
 <script>
   // ----------------------------
+  // Session ID (per user)
+  // ----------------------------
+  function getSessionId() {
+    const key = "ai_quiz_session_id";
+    let sid = localStorage.getItem(key);
+    if (!sid) {
+      sid = "sid_" + Math.random().toString(16).slice(2) + "_" + Date.now();
+      localStorage.setItem(key, sid);
+    }
+    return sid;
+  }
+  const SESSION_ID = getSessionId();
+
+  // ----------------------------
   // State
   // ----------------------------
-  let BANK = { mcq: [] };
+  let BANK = [];   // all MCQ accumulated
   let idx = 0;
   let score = 0;
-  let checked = false;
 
   const $ = (id) => document.getElementById(id);
 
@@ -79,128 +91,12 @@
     el.className = "status " + (kind || "");
   }
 
+  function updateBankInfo(extra="") {
+    $("bankInfo").textContent = `Current bank: ${BANK.length} MCQ. ${extra}`.trim();
+  }
+
   function showQuiz(show) {
     $("quizCard").style.display = show ? "block" : "none";
-    $("restartBtn").disabled = !show;
-  }
-
-  function enableStart(enabled) {
-    $("startBtn").disabled = !enabled;
-  }
-
-  // ----------------------------
-  // Generate
-  // ----------------------------
-  $("genBtn").addEventListener("click", async () => {
-    console.log("Generate clicked");
-    const file = $("pdfFile").files && $("pdfFile").files[0];
-
-    if (!file) {
-      alert("Please select a PDF first.");
-      setStatus("No PDF selected.", "bad");
-      return;
-    }
-
-    if (file.type !== "application/pdf" && !file.name.toLowerCase().endsWith(".pdf")) {
-      alert("That doesn’t look like a PDF. Please choose a .pdf file.");
-      setStatus("Selected file is not a PDF.", "bad");
-      return;
-    }
-
-    enableStart(false);
-    showQuiz(false);
-    setStatus("Uploading PDF and generating 50 MCQ… please wait.", "");
-
-    const fd = new FormData();
-    fd.append("pdf", file);
-
-    try {
-      const res = await fetch("/api/generate-quiz-from-pdf", {
-        method: "POST",
-        body: fd
-      });
-
-      console.log("Server status:", res.status);
-
-      if (!res.ok) {
-        const txt = await res.text();
-        console.error("Server error body:", txt);
-        setStatus("Server error " + res.status + ". Open Console (F12).", "bad");
-        alert("Server error. Open DevTools (F12) → Console for details.");
-        return;
-      }
-
-      const data = await res.json();
-      console.log("Quiz JSON:", data);
-
-      if (!data || !Array.isArray(data.mcq)) {
-        console.error("Unexpected JSON shape:", data);
-        setStatus("Bad JSON returned (missing mcq). Open Console (F12).", "bad");
-        alert("Bad JSON returned. Check Console (F12).");
-        return;
-      }
-
-      // Keep only MCQ
-      BANK = { mcq: data.mcq };
-      setStatus(`Generated ${BANK.mcq.length} MCQ. Click “Start Quiz”.`, "ok");
-      enableStart(BANK.mcq.length > 0);
-
-    } catch (e) {
-      console.error("Fetch failed:", e);
-      setStatus("Network error. Open Console (F12).", "bad");
-      alert("Network error. If you’re on Render, try refreshing the page.");
-    }
-  });
-
-  // ----------------------------
-  // Start / Restart
-  // ----------------------------
-  $("startBtn").addEventListener("click", () => {
-    if (!BANK.mcq.length) return;
-    idx = 0;
-    score = 0;
-    render();
-    showQuiz(true);
-  });
-
-  $("restartBtn").addEventListener("click", () => {
-    if (!BANK.mcq.length) return;
-    idx = 0;
-    score = 0;
-    render();
-    showQuiz(true);
-  });
-
-  // ----------------------------
-  // Render question
-  // ----------------------------
-  function render() {
-    checked = false;
-    $("nextBtn").disabled = true;
-    $("feedback").textContent = "";
-    $("feedback").className = "feedback";
-
-    const total = BANK.mcq.length;
-    const q = BANK.mcq[idx];
-
-    $("progress").textContent = `Question ${idx + 1} / ${total}`;
-    $("score").textContent = `Score ${score} / ${total}`;
-
-    $("prompt").textContent = q?.prompt || "(no prompt)";
-
-    const opts = q?.options || {};
-    const optionsEl = $("options");
-    optionsEl.innerHTML = "";
-
-    ["A","B","C","D"].forEach(letter => {
-      const text = (opts[letter] ?? "");
-      const label = document.createElement("label");
-      label.innerHTML = `
-        <input type="radio" name="ans" value="${letter}">
-        <strong>${letter})</strong> ${escapeHtml(text)}
-      `;
-      optionsEl.appendChild(label);
-    });
   }
 
   function escapeHtml(s) {
@@ -210,38 +106,134 @@
   }
 
   // ----------------------------
-  // Check / Next
+  // Next 20
   // ----------------------------
+  $("next20Btn").addEventListener("click", async () => {
+    const file = $("pdfFile").files && $("pdfFile").files[0];
+    if (!file) {
+      alert("Please select a PDF first.");
+      setStatus("No PDF selected.", "bad");
+      return;
+    }
+
+    $("next20Btn").disabled = true;
+    setStatus("Generating next 20… please wait.", "");
+
+    const fd = new FormData();
+    fd.append("session_id", SESSION_ID);
+    fd.append("pdf", file);
+
+    try {
+      const res = await fetch("/api/next-20", { method: "POST", body: fd });
+
+      if (!res.ok) {
+        const txt = await res.text();
+        console.error("Server error:", txt);
+        setStatus("Server error. See Console (F12).", "bad");
+        alert("Server error. Open DevTools (F12) → Console.");
+        return;
+      }
+
+      const data = await res.json();
+      BANK = data.mcq || [];
+      const added = data.added ?? 0;
+
+      setStatus(`Added ${added} new questions.`, "ok");
+      updateBankInfo();
+      $("startBtn").disabled = BANK.length === 0;
+
+    } catch (e) {
+      console.error(e);
+      setStatus("Network error. Try refresh.", "bad");
+    } finally {
+      $("next20Btn").disabled = false;
+    }
+  });
+
+  // ----------------------------
+  // Reset
+  // ----------------------------
+  $("resetBtn").addEventListener("click", async () => {
+    const fd = new FormData();
+    fd.append("session_id", SESSION_ID);
+
+    try {
+      await fetch("/api/reset", { method: "POST", body: fd });
+    } catch {}
+    BANK = [];
+    idx = 0;
+    score = 0;
+    showQuiz(false);
+    $("startBtn").disabled = true;
+    updateBankInfo("Reset complete.");
+    setStatus("Reset complete. Upload a PDF and click Next 20.", "ok");
+  });
+
+  // ----------------------------
+  // Quiz flow
+  // ----------------------------
+  $("startBtn").addEventListener("click", () => {
+    if (!BANK.length) return;
+    idx = 0;
+    score = 0;
+    render();
+    showQuiz(true);
+  });
+
+  function render() {
+    $("nextBtn").disabled = true;
+    $("feedback").textContent = "";
+    $("feedback").className = "feedback";
+
+    const total = BANK.length;
+    const q = BANK[idx];
+
+    $("progress").textContent = `Question ${idx + 1} / ${total}`;
+    $("score").textContent = `Score ${score} / ${total}`;
+    $("prompt").textContent = q?.prompt || "(no prompt)";
+
+    const opts = q?.options || {};
+    const optionsEl = $("options");
+    optionsEl.innerHTML = "";
+
+    ["A","B","C","D"].forEach(letter => {
+      const text = opts[letter] ?? "";
+      const label = document.createElement("label");
+      label.innerHTML = `
+        <input type="radio" name="ans" value="${letter}">
+        <strong>${letter})</strong> ${escapeHtml(text)}
+      `;
+      optionsEl.appendChild(label);
+    });
+  }
+
   $("checkBtn").addEventListener("click", () => {
-    if (!BANK.mcq.length) return;
+    if (!BANK.length) return;
 
     const picked = document.querySelector('input[name="ans"]:checked');
     if (!picked) { alert("Please select an option."); return; }
 
-    const q = BANK.mcq[idx];
-    const correct = q.answer;
-
-    const ok = (picked.value === correct);
+    const correct = BANK[idx].answer;
+    const ok = picked.value === correct;
     if (ok) score++;
 
     $("feedback").textContent = ok ? "Correct!" : `Incorrect. Correct answer: ${correct}`;
     $("feedback").className = "feedback " + (ok ? "ok" : "bad");
-
-    checked = true;
     $("nextBtn").disabled = false;
   });
 
   $("nextBtn").addEventListener("click", () => {
-    if (!BANK.mcq.length) return;
-
-    if (idx < BANK.mcq.length - 1) {
+    if (idx < BANK.length - 1) {
       idx++;
       render();
     } else {
-      alert(`Done! Final score: ${score} / ${BANK.mcq.length}`);
+      alert(`Done! Final score: ${score} / ${BANK.length}`);
       showQuiz(false);
     }
   });
+
+  // Initial UI
+  updateBankInfo();
 </script>
 </body>
 </html>
