--- a/public/quiz.html
+++ b/public/quiz.html
@@ -31,7 +31,7 @@
 <body>
   <div class="box">
     <h1>AI Revision Quiz</h1>
-    <div class="meta">Select a PDF and page range. Generate questions continuously without restarting.</div>
+    <div class="meta">Select a PDF and page range. Press get questions to start generating or to generate more questions. Click reset to upload another PDF.</div>
 
     <div class="card">
       <div class="row">
@@ -46,7 +46,7 @@
         </label>
 
         <button id="getBtn">Get Questions</button>
-        <button id="startBtn" disabled>Start / Continue Quiz</button>
+        <button id="startBtn" disabled>Start Quiz</button>
         <button id="resetBtn">Reset</button>
       </div>
 
@@ -249,3 +249,4 @@
 </script>
 </body>
 </html>
+
