--- a/public/quiz.html
+++ b/public/quiz.html
@@ -31,7 +31,7 @@
 <body>
   <div class="box">
     <h1>AI Revision Quiz</h1>
-    <div class="meta">Select a PDF and page range. Press get questions to start generating or to generate more questions. Click reset to upload another PDF.</div>
+    <div class="meta">Select a PDF and page range. Press get questions to start generating or to generate more questions. Click reset to change PDF.</div>
 
     <div class="card">
       <div class="row">
@@ -249,4 +249,5 @@
 </script>
 </body>
 </html>
+
 
